<resources>
    <string name="app_name">Ecommerce-6</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="user_info_will_appear_here">User Info will appear here.</string>
    <string name="logout">Logout</string>
    <string name="logout_all_devices">Logout All Devices</string>
</resources>